web-admin/rolling-update/web-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin
  namespace: openmsa    
  
  labels:
    app: web-admin
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-admin
  template:
    metadata:
      
      labels:
        app: web-admin


    spec:
      containers:
        - name: web-admin
          image: oscka/web-admin
          ports:
          - name: http
            containerPort: 8080
