web-admin/rolling-update/web-admin-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-admin-svc
  namespace: openmsa
spec:
  selector:
    app: web-admin
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
